language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_block_tail_position_4.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  case 1 {\n    _ -> {\n      use <- wibble\n      use <- wibble\n      123\n    }\n    _ -> todo\n  }\n}\n\nfn wibble(f: fn() -> Float) -> Float { f() }\n"
---
----- BEFORE ACTION

pub fn main() {
  case 1 {
    _ -> {
         ▔
      use <- wibble
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
      use <- wibble
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
      123
▔▔▔▔▔▔▔▔▔
    }
▔▔▔▔↑
    _ -> todo
  }
}

fn wibble(f: fn() -> Float) -> Float { f() }


----- AFTER ACTION

pub fn main() {
  case 1 {
    _ -> function()
    _ -> todo
  }
}

fn function() -> Float {
  use <- wibble
      use <- wibble
      123
}

fn wibble(f: fn() -> Float) -> Float { f() }
