language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_can_extract_bool_used_as_call_argument.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  wibble(label: True)\n}"
---
----- BEFORE ACTION
pub fn main() {
  wibble(label: True)
                ↑    
}


----- AFTER ACTION
pub fn main() {
  let bool = True
  wibble(label: bool)
}
