language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_can_extract_number_used_as_call_argument.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  wibble(label: 1)\n}"
---
----- BEFORE ACTION
pub fn main() {
  wibble(label: 1)
                ↑ 
}


----- AFTER ACTION
pub fn main() {
  let int = 1
  wibble(label: int)
}
