language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_declaration_with_proper_indentation.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let fahrenheit = {\n    let degrees = 64\n    degrees\n  }\n  fahrenheit\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let fahrenheit = {
    let degrees = 64
    ▔▔▔▔▔▔▔▔▔▔↑     
    degrees
  }
  fahrenheit
}


----- AFTER ACTION

const degrees = 64

pub fn main() {
  let fahrenheit = {
    degrees
  }
  fahrenheit
}
