language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_doesnt_place_constant_below_documentation.snap
---
source: language-server/src/tests/action.rs
expression: "\n/// Wibble does some wobbling\npub fn wibble() {\n    let x = \"wobble\"\n    x\n}\n"
---
----- BEFORE ACTION

/// Wibble does some wobbling
pub fn wibble() {
    let x = "wobble"
        ↑           
    x
}


----- AFTER ACTION

/// Wibble does some wobbling
const x = "wobble"

pub fn wibble() {
    x
}
