language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_call_argument_with_float.snap
---
source: language-server/src/tests/action.rs
expression: "import gleam/float\n\npub fn main() {\n  float.ceiling(1.9998)\n}"
---
----- BEFORE ACTION
import gleam/float

pub fn main() {
  float.ceiling(1.9998)
                ▔▔▔▔▔↑ 
}


----- AFTER ACTION
import gleam/float

const float = 1.9998

pub fn main() {
  float.ceiling(float)
}
