language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_constant_from_call_argument_with_list.snap
---
source: language-server/src/tests/action.rs
expression: "import gleam/io\n\npub fn main() {\n  io.debug([\"constant\", \"another constant\"])\n}"
---
----- BEFORE ACTION
import gleam/io

pub fn main() {
  io.debug(["constant", "another constant"])
           ↑                                
}


----- AFTER ACTION
import gleam/io

const strings = ["constant", "another constant"]

pub fn main() {
  io.debug(strings)
}
